supression config inutile